fix: enhanced select on iOS and line-height

--- a/site/_scss/blocks/_enhanced-select.scss
+++ b/site/_scss/blocks/_enhanced-select.scss
@@ -45,8 +45,8 @@
       font-family: 'Google Sans', sans-serif;
       font-size: 0.875rem;
       font-weight: 500;
-      line-height: 3rem;
-      padding: 0 2.75rem;
+      line-height: 1.2rem;
+      padding: 1rem 2.75rem;
       text-align: left;
     }
 
